Fixing the 3/4-down button alignment... it was off by a pixel :)

--- a/assets/css/lightning.css
+++ b/assets/css/lightning.css
@@ -298,7 +298,7 @@ h1 {
 .threeFourImg {
     width: 57px;
 }
-.threeFourImg.toggle { background-position: -227px bottom;}
+.threeFourImg.toggle { background-position: -226px bottom;}
 
 .fourFourImg {
     width: 61px;
